Fix T99702: Gpencil Flip strokes did not support multiframe edit

This was a missing feature and this commit solves this.